--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,13 @@
 name: tankerkoenig_api
 description: A simple command-line application.
-version: 1.0.0
+version: 0.1.0
 # homepage: https://www.example.com
-
 environment:
-  sdk: '>=2.14.3 <3.0.0'
-
-
-# dependencies:
-#   path: ^1.8.0
+  sdk: ">=2.14.3 <3.0.0"
 
 dev_dependencies:
   lints: ^1.0.0
+  test: ^1.18.2
+dependencies:
+  http: ^0.13.4
+  location: ^4.3.0
