--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,9 @@
 name: tankerkoenig_api
-description: A simple command-line application.
-version: 0.1.0
-# homepage: https://www.example.com
+description: This package implement the tankerkoenig api. With this api you can get acces to the german patrol station information with diesel, e5 and e10. This plugin is not developed by tankerkönig!
+version: 1.0.0-dev.0
+homepage: https://creativecommons.tankerkoenig.de/
+repository: https://github.com/cedteg/tankerkoenig_api
+issue_tracker: https://github.com/cedteg/tankerkoenig_api/issues
 environment:
   sdk: ">=2.14.3 <3.0.0"
 
